ZMIANY: - Po usunięciu żółwia zostajemy przekierowani na stronę z żółwiami - W widoku "Twoje żółwie" widać statystyki, które są pobierane z bazy danych - W widoku "Szczegóły żółwia" jest podgląd jedzenia które mamy w ekwipunku. Pojawił się opis co dodają